[tool.poetry]
name = "datacleaning"
version = "0.1.0"
description = ""
authors = ["RaneemAbdulazez <raneem97su@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.4"
opencv-python = "^4.5.2"
matplotlib = "^3.4.2"
pathlib = "^1.0.1"
seaborn = "^0.11.1"
keras = "^2.4.3"
tensorflow = "^2.5.0"
scikit-image = "^0.18.1"
tqdm = "^4.61.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
